# myenergi_api

./: LICENSE  README.md  boost.py  combined.py  gethistory.py  help.py  history.ipynb  printhistory.py  pyproject.toml  requirements.txt  setmode.py  setup.py  test.py  unittests.py  utilities.py
examples/: all.json  boosttimes.json  harvi.json  history_output.json  zappi.json  zappihistory.json  zappihistoryhour.json
myenergi/: __init__.py  api.py  apiconstruct.py  const.py  error.py
